# exp07_rough_walk

./: .gitignore  environment.yml  notebook.ipynb  notebook.py  requirements-lab4-cu128.txt  requirements-summer1-full-freeze.txt  requirements-summer1.txt  student.py
assets/motions/: G1_walk_50hz.npz  NOTICE.txt  manifest.json
dependencies/dependencies/: README.md
dependencies/dependencies/terrain-generator/: README.md  pyproject.toml
dependencies/dependencies/terrain-generator/examples/: generate_procedural.py  generate_wfc_scene.py  visualize_route.py  visualize_terrain.py
dependencies/dependencies/terrain-generator/generator/: __init__.py  cli.py  mesh_terrain.py  mesh_utils.py  nav_utils.py  noise_displace.py  presets.py  route_graph.py  terrain_bundle.py  terrain_fields.py  terrain_registry.py  terrain_state.py  utils.py  visualization.py
dependencies/dependencies/terrain-generator/generator/mesh_parts/: __init__.py  basic_parts.py  create_tiles.py  indoor_parts.py  mesh_parts_cfg.py  mountain.py  noise.py  overhanging_parts.py  tree.py
dependencies/dependencies/terrain-generator/generator/terrains/: __init__.py  _box_utils.py  base.py  door.py  forest.py  pile.py  platform_gap.py  procedural.py  pyramid_stairs.py  stakes.py
dependencies/dependencies/terrain-generator/generator/wfc/: __init__.py  procedural_tiles.py  scene.py  tiles.py  wfc.py
dependencies/dependencies/terrain-generator/tests/: test_route_planning.py
src/: __init__.py  paths.py  student_api.py  workflow.py
src/amp/: __init__.py  dagger.py  motion.py  ppo.py  replay.py  runner.py  (+2 more)
(+6 files in other folders)
